@@ -26,13 +26,11 @@
 #'   Numerical tolerance to treat two numbers as equal.
 #'   Variables stored as \code{double} will get rounded accordingly before computing the mode.
 #'   Default is \code{sqrt(.Maschine$double.eps)}.
-#' @param show.info [\code{logical(1)}]\cr
-#'   Verbose output on console?
-#'   Default is \code{TRUE}.
+#' @template arg_showinfo
 #' @return [\code{\link{data.frame}} | \code{\link{SupervisedTask}}].
 #' @export
 removeConstantFeatures = function(x, target, perc = 0, dont.rm = character(0L),
-  na.ignore = FALSE, tol = .Machine$double.eps^.5, show.info = TRUE) {
+  na.ignore = FALSE, tol = .Machine$double.eps^.5, show.info = getMlrOption("show.info")) {
 
   checkArg(x, c("data.frame", "SupervisedTask"))
   checkArg(perc, "numeric", len = 1L, lower = 0, upper=1, na.ok = FALSE)
