@@ -1,0 +1,4 @@
+#' @param show.info [\code{logical(1)}]\cr
+#'   Print verbose output on console?
+#'   Default is set via \code{\link{configureMlr}}.
+
