@@ -3,10 +3,17 @@
 \alias{configureMlr}
 \title{Configures the behavior of the package.}
 \usage{
-configureMlr(on.learner.error, on.learner.warning, on.par.without.desc,
-  show.learner.output)
+configureMlr(show.info, on.learner.error, on.learner.warning,
+  on.par.without.desc, show.learner.output)
 }
 \arguments{
+\item{show.info}{[\code{logical(1)}]\cr
+Some methods of mlr support a \code{show.info} argument to enable
+verbose output on the console. This option sets the default value for these arguments.
+Setting the argument manually in one of these functions will overwrite the default
+value for that specific function call.
+Default is \code{TRUE}.}
+
 \item{on.learner.error}{[\code{character(1)}]\cr
 What should happen if an error in an underlying learning algorithm is caught:\cr
 \dQuote{stop}: R exception is generated.\cr
@@ -34,7 +41,7 @@ suppressed?
 Default is \code{TRUE}.}
 }
 \value{
-Nothing.
+[\code{invisible(NULL)}].
 }
 \description{
 Configuration is done by setting custom \code{\link{options}}.
@@ -44,6 +51,6 @@ If you do not set an option here, its current value will be kept.
 If you call this function with an empty argument list, everything is set to its defaults.
 }
 \seealso{
-\code{\link{getMlrOptions}}
+Other configure: \code{\link{getMlrOptions}}
 }
 
